# toy-standalone

./: CMakeLists.txt  README.md  rename.py
.github/workflows/: ci.yaml
cmake/: get_mlir.cmake
dialect/: CMakeLists.txt
dialect/toy-opt/: CMakeLists.txt
grammar/: Placeholder.g4  Toy.g4
include/: CompileTimeExceptions.h  macros.h
include/AST/: AST.h  ASTBuilder.h  ASTVisitor.h
include/ASTPasses/: Pass.h  Rewrite.h  TestPass.h
include/Backend/: BackEnd.h
include/Symbol/: SymbolTable.h
include/Toy/: CMakeLists.txt  Dialect.h  Ops.td  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td  ToyPasses.h  ToyPasses.td  ToyTypes.h  ToyTypes.td
include/ast/: astBuilder.h
include/ast_passes/: pass.h
include/backend/: BackEnd.h
lib/Toy/: CMakeLists.txt  Ops.cpp  ToyDialect.cpp  ToyOps.cpp  ToyPasses.cpp  ToyTypes.cpp
runtime/: CMakeLists.txt
runtime/include/: run_time_errors.h
runtime/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/AST/: AST.cpp  ASTBuilder.cpp  ASTVisitor.cpp  AstBuilder.cpp
src/ASTPasses/: Rewrite.cpp
src/Backend/: BackEnd.cpp  BackEndPass.cpp
src/backend/: BackEnd.cpp
tests/: CIConfig.json  PlaceholderCompileConfig.json  PlaceholderInterpConfig.json  ToyCompileConfig.json  ToyInterpConfig.json
tests/testfiles/memyselfandi/: comment.test  example.test  funcadd.test  funcstat.test  multifunction.test  toy_ex.test
